# seemoon

./: CMakeLists.txt  Codex.md  LICENSE  README.md
Core/: CMakeLists.txt  core.cpp  core.h  dllmain.cpp
Core/extensions/: iplugin.h  irotation.h
Core/game/: inventory.cpp  inventory.h  lua_engine.cpp  lua_engine.h  movement.cpp  movement.h  spell_manager.cpp  spell_manager.h  target_manager.cpp  target_manager.h
Core/hooks/: endscene_hook.cpp  endscene_hook.h  hook_utils.h
Core/ipc/: pipe_server.cpp  pipe_server.h
Core/memory/: offsets.h
Core/objects/: object_manager.cpp  object_manager.h  wow_gameobject.h  wow_local_player.h  wow_object.h  wow_player.h  wow_unit.h
Core/products/: gatherer.cpp  gatherer.h  iproduct.h
Core/src/: core.cpp
Injector/: CMakeLists.txt  main.cpp
docs/: architecture.md  build.md  roadmap.md  status.md
